Fixed bug shop logo now has correct styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,7 +173,7 @@ body.dark-theme {
   align-items: center;
 }
 
-.nav__log {
+.nav__logo {
   color: var(--title-color);
   font-weight: var(--font-medium);
 }
