--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -288,7 +288,7 @@ body.dark-theme {
   justify-self: center;
 }
 .new__img {
-  /* width: 270px; */
+  width: 270px;
   margin-bottom: 1rem;
 }
 .new__link {
@@ -537,11 +537,11 @@ row-gap: .75rem;
   .home__images {
     width: 248px;
   }
-  .home__images:nth-child(1) {
+  .home__images img:nth-child(1) {
     width: 180px;
     top: -7rem;
   }
-  .home__images:nth-child(2) {
+  .home__images img:nth-child(2) {
     width: 150px;
   }
 
@@ -578,14 +578,102 @@ row-gap: .75rem;
     grid-template-columns: repeat(2, 100px);
     row-gap: .5rem;
   }
-  
+
 }
 
 /* For medium devices */
+@media screen and (min-width: 576px) {
+  .nav__menu {
+    width: 324px;
+  }
+  .footer__content {
+    grid-template-columns: repeat(3, max-content);
+  }
+}
 
-
+@media screen and (min-width: 767px) {
+  .home__container,
+  .new__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+  }
+  .home__images {
+    margin-top: 6rem;
+  }
+  .brand__container {
+    grid-template-columns: repeat(4, max-content);
+  }
+  .footer__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+  }
+}
 /* For large devices */
+@media screen and (min-width: 1023px) {
+  .section {
+    padding: 7rem 0 1rem;
+  }
+  .section__title {
+    margin-bottom: 4rem;
+  }
 
+  .nav {
+    height: calc(var(--header-height) + 1.5rem);
+  }
+  .nav__menu {
+    width: initial;
+    margin-left: auto;
+  }
+  .nav__list {
+    display: flex;
+    column-gap: 3rem;
+  }
+  .nav__link {
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    transition: .3s;
+  }
+  .nav__link i {
+    display: none;
+  }
+  .nav__link:hover {
+    color: var(--title-color);
+  }
+
+  .active-link {
+    color: var(--title-color);
+    text-decoration: line-through;
+  }
+
+  .change-theme {
+    margin-left: 3rem;
+    color: var(--text-color);
+  }
+  .dark-theme .nav__menu {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .products__container {
+    width: 954px;
+  }
+
+  .footer__content {
+    grid-template-columns: repeat(4, max-content);
+    column-gap: 5.5rem;
+  }
+  .footer__link {
+    font-size: var(--normal-font-size);
+  }
+  .footer__info {
+    padding-bottom: 2rem;
+    row-gap: 1rem;
+  }
+}
+
+@media screen and (min-width: 1053px) {
+  
+}
 
 /* For 2K resolutions (2048 x 1152, 2048 x 1536) */
 
